--- a/LogindeG1/Menu.Master
+++ b/LogindeG1/Menu.Master
@@ -1,35 +1,38 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Menu.master.cs" Inherits="LogindeG1.Menu" %>
-
 <!DOCTYPE html>
 
 <html>
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    
+    <link href="Recursos/CSS/Styles2.css" rel="stylesheet" />
 
     <title>Menu Principal</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    <link href="Recursos/CSS/styles2.css" rel="stylesheet" />
+
 </head>
 <body>
     <form id="formulario_Master" runat="server">
         <div>
             <div id="navbar">
-                <ul>
+                <ul style="width: 1283px">
                     <li><a href="Deafault.aspx">Inicio</a></li>
                     <li><a href="Categorias.aspx">Categorias</a></li>
                     <li><a href="Acerca de.aspx">Acerca de</a></li>
                     <li><a href="Ayuda.aspx">Ayuda</a></li>
+                    <li><a href="Consultas.aspx">Consultas</a></li>   
                 </ul>
             </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
+            <div class="Contenido">
+                
+            </div>
             <div id="footer">
                 <span>contacto@gmail.com</span>
                 <span> Whatsapp +503 5912 2103</span>
             </div>
-        </div>
+            </div>
     </form>
 </body>
 </html>
