--- a/LogindeG1/Recursos/CSS/styles2.css
+++ b/LogindeG1/Recursos/CSS/styles2.css
@@ -5,11 +5,12 @@
     background-color:cornflowerblue;
     color:white;
     position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:40px;
+    top:0px;
+    left:-8px;
+    width:99%;
+    height:69px;
     padding:10px;
+    margin-bottom: 0px;
 }
 
 #navbar ul li{
@@ -28,13 +29,22 @@
     color:dodgerblue;
 }
 
+.Contenido {
+    width: 1585px;
+    text-align: center;
+    color: #034c81;
+    font-size: medium;
+    height: 501px;
+    margin-top: 86px;
+}
+
 #footer {
     background-color:dimgrey;
     color: white;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    bottom: 0px;
+    left: 4px;
+    width: 99%;
     padding: 70px 0;
     text-align: center;
     font-size:x-large;
