--- a/LogindeG1/Menu.Master
+++ b/LogindeG1/Menu.Master
@@ -16,7 +16,7 @@
         <div>
             <div id="navbar">
                 <ul style="width: 1283px">
-                    <li><a href="Deafault.aspx">Inicio</a></li>
+                    <li><a href="Inicio.aspx">Inicio</a></li>
                     <li><a href="Categorias.aspx">Categorias</a></li>
                     <li><a href="Acerca de.aspx">Acerca de</a></li>
                     <li><a href="Ayuda.aspx">Ayuda</a></li>
