--- a/LogindeG1/Recursos/CSS/Style4.css
+++ b/LogindeG1/Recursos/CSS/Style4.css
@@ -5,7 +5,7 @@
 
 .topnav {
     overflow: hidden;
-    background-color: #3E91A3;
+    background-color: #193648;
 }
 
     .topnav a {
@@ -15,11 +15,11 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 18px;
+        font-size: 17px;
     }
 
 .active {
-    background-color: #3E91A3;
+    background-color: #193648;
     color: white;
 }
 
@@ -33,7 +33,7 @@
 }
 
     .dropdown .dropbtn {
-        font-size: 18px;
+        font-size: 17px;
         border: none;
         outline: none;
         color: white;
@@ -46,7 +46,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #71C8E2;
+    background-color: #59859E;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -54,7 +54,7 @@
 
     .dropdown-content a {
         float: none;
-        color: black;
+        color: white;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -62,12 +62,12 @@
     }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #62CECA;
+    background-color: #9DA3D7;
     color: white;
 }
 
 .dropdown-content a:hover {
-    background-color: #dcddff;
+    background-color: #D7EAFF;
     color: black;
 }
 
@@ -75,22 +75,45 @@
     display: block;
 }
 
-.topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 }
 
-.topnav.responsive .dropdown {
-    float: none;
-}
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
 
-.topnav.responsive .dropdown-content {
-    position: relative;
-}
+        .topnav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
 
-.topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
+        .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+
+        .topnav.responsive .dropdown {
+            float: none;
+        }
+
+        .topnav.responsive .dropdown-content {
+            position: relative;
+        }
+
+        .topnav.responsive .dropdown .dropbtn {
+            display: block;
+            width: 100%;
+            text-align: left;
+        }
 }
